// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render SelectButton component render component correctly 1`] = `
<span
  className="selectButton"
>
  <Button
    className="filterButton"
    onClick={[Function]}
  >
    Title
  </Button>
  <span
    className="selectArrow"
  />
  <ul
    className="selectOptionsList"
  >
    <li
      className="selectOption"
    >
      <button
        data-value=""
        onClick={[Function]}
        type="button"
      >
        All genres
      </button>
    </li>
    <li
      className="selectOption"
    >
      <button
        data-value={1}
        onClick={[Function]}
        type="button"
      >
        Action
      </button>
    </li>
    <li
      className="selectOption"
    >
      <button
        data-value={2}
        onClick={[Function]}
        type="button"
      >
        Scifi
      </button>
    </li>
  </ul>
</span>
`;

exports[`render SelectButton component render filterButton opening click correctly 1`] = `
<span
  className="selectButton active"
>
  <Button
    className="filterButton"
    onClick={[Function]}
  >
    Title
  </Button>
  <span
    className="selectArrow"
  />
  <ul
    className="selectOptionsList"
  >
    <li
      className="selectOption"
    >
      <button
        data-value=""
        onClick={[Function]}
        type="button"
      >
        All genres
      </button>
    </li>
    <li
      className="selectOption"
    >
      <button
        data-value={1}
        onClick={[Function]}
        type="button"
      >
        Action
      </button>
    </li>
    <li
      className="selectOption"
    >
      <button
        data-value={2}
        onClick={[Function]}
        type="button"
      >
        Scifi
      </button>
    </li>
  </ul>
</span>
`;

exports[`render SelectButton component render handleClick correctly 1`] = `
<span
  className="selectButton active"
>
  <Button
    className="filterButton"
    onClick={[Function]}
  >
    tested
  </Button>
  <span
    className="selectArrow"
  />
  <ul
    className="selectOptionsList"
  >
    <li
      className="selectOption"
    >
      <button
        data-value=""
        onClick={[Function]}
        type="button"
      >
        All genres
      </button>
    </li>
    <li
      className="selectOption"
    >
      <button
        data-value={1}
        onClick={[Function]}
        type="button"
      >
        Action
      </button>
    </li>
    <li
      className="selectOption"
    >
      <button
        data-value={2}
        onClick={[Function]}
        type="button"
      >
        Scifi
      </button>
    </li>
  </ul>
</span>
`;
